--- a/xss/production/test/wgl_coll_anim_2.html
+++ b/xss/production/test/wgl_coll_anim_2.html
@@ -66,6 +66,7 @@ application.events = new ev.EventHolder();
 				{
 				child_.start_kf = 0;
 				child_.end_kf = 47;
+				child_.time = 30;
 					global_package.items[i].children['anim'] = child_;
 				}					
 			}	
@@ -124,7 +125,7 @@ manager.events.dispatch("update", [g_delta, g_elapsed]);
 				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var camera_1;var a_ligth;var d_ligth_1;var light1;var model1;
+var camera_1;var a_ligth;var d_ligth_1;var light1;var light2;var light3;var model1;
 threejs_load_resources(manager, function()
 {
 		    camera_1 = 
@@ -140,9 +141,17 @@ threejs_load_resources(manager, function()
 	    manager.scene.add(d_ligth_1);
 			d_ligth_1.manager = manager;
 	    light1 = 
-	    new THREE.PointLight(deepskyblue, 0.200000003, 0) ;
+	    new THREE.PointLight(red, 0.200000003, 0) ;
 	    manager.scene.add(light1);
 			light1.manager = manager;
+	    light2 = 
+	    new THREE.PointLight(green, 0.200000003, 0) ;
+	    manager.scene.add(light2);
+			light2.manager = manager;
+	    light3 = 
+	    new THREE.PointLight(blue, 0.200000003, 0) ;
+	    manager.scene.add(light3);
+			light3.manager = manager;
 		model1 = clone3jsObject( manager.streamer.get_resource('pump').data, manager );	
 		manager.scene.add(model1);
 		model1.events = new ev.EventHolder();			
@@ -199,10 +208,16 @@ animation.play(false, 0);
 	application.events.addListener("update", function(delta,elapsed)
 	{    
 		var time = elapsed * 0.000500000024;
-var frameTime = delta * 0.00100000005;
+var frameTime = delta * 0.00100000005 / model1.anim.time / (model1.anim.end_kf - model1.anim.start_kf);
 light1.position.x = Math.sin(time * 7) * 3009;
 light1.position.y = Math.cos(time * 5) * 4000;
 light1.position.z = Math.cos(time * 3) * 3009;
+light2.position.x = Math.sin(time * 7) * 3009;
+light2.position.y = Math.cos(time * 3) * 4000;
+light2.position.z = Math.cos(time * 5) * 3009;
+light3.position.x = Math.sin(time * 3) * 3009;
+light3.position.y = Math.cos(time * 5) * 4000;
+light3.position.z = Math.cos(time * 7) * 3009;
 if (application.t >= model1.anim.start_kf && application.t <= model1.anim.end_kf)
 {
 for(var i = 0; i < model1.anim.length; i++)
