--- a/xss/production/test/wgl_coll_anim_2.html
+++ b/xss/production/test/wgl_coll_anim_2.html
@@ -64,8 +64,8 @@ application.events = new ev.EventHolder();
 			{
 				if(global_package.items[i].id == "pump")
 				{
-				child_.start_kf = 0;
-				child_.end_kf = 47;
+				child_.start_frame = 0;
+				child_.end_frame = 47;
 				child_.time = 30;
 					global_package.items[i].children['anim'] = child_;
 				}					
@@ -168,47 +168,14 @@ threejs_load_resources(manager, function()
             model1.scale.z = 1;
             application.mouse_x = null;
             application.mouse_y = null;
-            application.t = 0;
-            application.cam = 0;
-	application.start = function() 
-	{
-		for(var k = 0; k < model1.anim.length; k++)
-{
-var animation = model1.anim[k];
-var hl = animation.hierarchy.length;
-for(var h = 0; h < hl; h++)
-{
-var keys = animation.data.hierarchy[h].keys;
-var sids = animation.data.hierarchy[h].sids;
-var obj = animation.hierarchy[h];
-if (keys.length && sids)
-{
-for(var s = 0; s < sids.length; s++)
-{
-var sid = sids[s];
-var next = animation.getNextKeyWith(sid, h, 0);
-if (next)
-{
-next.apply(sid);
-}
-}
-obj.matrixAutoUpdate = false;
-animation.data.hierarchy[h].node.updateMatrix();
-obj.matrixWorldNeedsUpdate = true;
-}
-}
-animation.play(false, 0);
-}
-	};
 	application.events.addListener("init", function()
 	{    
-		application.start();
+		model1.anim.start();
 	}
 	);
 	application.events.addListener("update", function(delta,elapsed)
 	{    
 		var time = elapsed * 0.000500000024;
-var frameTime = delta * 0.00100000005 / model1.anim.time / (model1.anim.end_kf - model1.anim.start_kf);
 light1.position.x = Math.sin(time * 7) * 3009;
 light1.position.y = Math.cos(time * 5) * 4000;
 light1.position.z = Math.cos(time * 3) * 3009;
@@ -218,41 +185,6 @@ light2.position.z = Math.cos(time * 5) * 3009;
 light3.position.x = Math.sin(time * 3) * 3009;
 light3.position.y = Math.cos(time * 5) * 4000;
 light3.position.z = Math.cos(time * 7) * 3009;
-if (application.t >= model1.anim.start_kf && application.t <= model1.anim.end_kf)
-{
-for(var i = 0; i < model1.anim.length; i++)
-{
-model1.anim[i].update(frameTime);
-}
-}
-else
-{
-if (application.t > model1.anim.end_kf)
-{
-for(var j = 0; j < model1.anim.length; j++)
-{
-model1.anim[j].stop();
-}
-application.t = 0;
-application.start();
-}
-}
-application.t = application.t + frameTime;
-	}
-	);
-	application.events.addListener("keydown", function(keycode)
-	{    
-		if (keycode == C)
-{
-if (application.cam < 2)
-{
-application.cam = application.cam + 1;
-}
-else
-{
-application.cam = 0;
-}
-}
 	}
 	);
 	application.events.addListener("switch_cameras", function()
