--- a/xss/production/test/wgl_coll_anim_2.html
+++ b/xss/production/test/wgl_coll_anim_2.html
@@ -32,6 +32,8 @@ var streamer;
 var manager = new threejs.Manager(scene, renderer, null, canvas_position);
 var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
+manager.events.parent = manager;
+manager.c_anims = [];
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -66,7 +68,8 @@ application.events = new ev.EventHolder();
 				{
 				child_.start_frame = 0;
 				child_.end_frame = 47;
-				child_.time = 30;
+				child_.time = 45;
+				child_.loop = true;
 					global_package.items[i].children['anim'] = child_;
 				}					
 			}	
@@ -121,17 +124,15 @@ if(!g_delta) g_delta = 0;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
-				manager.scene.add(camera_1);
-				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var camera_1;var a_ligth;var d_ligth_1;var light1;var light2;var light3;var model1;
+var material_wireframe;var a_ligth;var d_ligth_1;var light1;var light2;var light3;var model1;var plane_1;
 threejs_load_resources(manager, function()
 {
-		    camera_1 = 
-		    new THREE.PerspectiveCamera(50, 1.76999998, 0.100000001, 100, null) ;	
-			manager.active_camera = camera_1;
-			camera_1.manager = manager;
+material_wireframe = new THREE.MeshBasicMaterial({
+color:gray,wireframe:true,
+	});
+			material_wireframe.manager = manager;
 	    a_ligth = 
 	    new THREE.AmbientLight(ivory) ;
 	    manager.scene.add(a_ligth);
@@ -156,9 +157,12 @@ threejs_load_resources(manager, function()
 		manager.scene.add(model1);
 		model1.events = new ev.EventHolder();			
 			model1.manager = manager;
-            manager.events.addListener('update', function(){if(camera_1)camera_1.lookAt(scene.position)});
-            camera_1.position.x = 50;
-            camera_1.position.z = 50;
+	    plane_1_plane = new THREE.PlaneGeometry(1000, 1000, 50, 50) ;
+	    plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
+	    manager.scene.add(plane_1);
+		plane_1.events = new ev.EventHolder();
+			plane_1.manager = manager;
+            set_material_alpha(material_wireframe, 20);
             a_ligth.position.y = 3000;
             a_ligth.position.z = 3000;
             d_ligth_1.position.y = 3000;
@@ -166,11 +170,14 @@ threejs_load_resources(manager, function()
             model1.scale.x = 1;
             model1.scale.y = 1;
             model1.scale.z = 1;
+            plane_1.position.y = -70;
             application.mouse_x = null;
             application.mouse_y = null;
 	application.events.addListener("init", function()
 	{    
-		model1.anim.start();
+		model1.model_cam2.position.x += 5;
+model1.model_cam2.position.z += 5;
+model1.anim.start();
 	}
 	);
 	application.events.addListener("update", function(delta,elapsed)
