--- a/xss/production/test/wgl_collada1.html
+++ b/xss/production/test/wgl_collada1.html
@@ -32,6 +32,8 @@ var streamer;
 var manager = new threejs.Manager(scene, renderer, null, canvas_position);
 var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
+manager.events.parent = manager;
+manager.c_anims = [];
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -63,8 +65,10 @@ application.events = new ev.EventHolder();
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "eurofighter")
+				{
 					global_package.items[i].children['model_cam'] = child_;
-			}
+				}					
+			}	
                 global_package.add_item(
 		{
 		id:				"pump",
@@ -86,22 +90,28 @@ application.events = new ev.EventHolder();
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "pump")
+				{
 					global_package.items[i].children['model_cam1'] = child_;
-			}
+				}					
+			}	
 			var child_ = {};
 			child_.type_ = 'collada_camera';
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "pump")
+				{
 					global_package.items[i].children['model_cam2'] = child_;
-			}
+				}					
+			}	
 			var child_ = {};
 			child_.type_ = 'collada_camera';
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "pump")
+				{
 					global_package.items[i].children['model_cam3'] = child_;
-			}
+				}					
+			}	
 		global_package.add_item({
 			id:				"invalid_res",
 			resource_type:	RESOURCE_IMAGE,
@@ -122,6 +132,7 @@ if (g_elapsed < 0)
 else
 	g_delta  = now - g_elapsed;  
 g_elapsed = now; 
+if(!g_delta) g_delta = 0;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
