Fixing collada animation & creating demos

--- a/xss/production/test/wgl_collada.html
+++ b/xss/production/test/wgl_collada.html
@@ -34,6 +34,7 @@ var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
 manager.events.parent = manager;
 manager.c_anims = [];
+manager.c_skins = [];
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -65,10 +66,24 @@ application.events = new ev.EventHolder();
 			for(var i = 0; i < global_package.items.length; i++)
 			{
 				if(global_package.items[i].id == "model_1")
-				{
+				{		
 					global_package.items[i].children['model_skin'] = child_;
 				}					
 			}	
+				var temp = {};
+				temp.type_ = 'skin';
+				temp.start_frame = 0;
+				temp.end_frame = 29;
+				temp.time = 1;
+				temp.loop = true;
+				temp.parent = 'model_skin';
+				for(var i = 0; i < global_package.items.length; i++)
+				{
+					if(global_package.items[i].id == "model_1")
+					{
+						global_package.items[i].children['walk'] = temp;
+					}
+				}
 		global_package.add_item({
 			id:				"invalid_res",
 			resource_type:	RESOURCE_IMAGE,
@@ -158,7 +173,11 @@ color:grey,
             plane_1.position.y = -500;
             application.mouse_x = null;
             application.mouse_y = null;
-            application.t = 0;
+	application.events.addListener("init", function()
+	{    
+		monster_model.model_skin.start("walk");
+	}
+	);
 	application.events.addListener("update", function(delta,elapsed)
 	{    
 		var time = elapsed * 0.000500000024;
@@ -173,19 +192,6 @@ light2.position.z = Math.cos(time * 7) * 3009;
 light3.position.x = Math.sin(time * 7) * 3009;
 light3.position.y = Math.cos(time * 3) * 4000;
 light3.position.z = Math.cos(time * 5) * 3009;
-if (application.t > 30)
-{
-application.t = 0;
-}
-if (monster_model.model_skin)
-{
-for(var i = 0; i < monster_model.model_skin.morphTargetInfluences.length; i++)
-{
-setMorphTargetInfluences(monster_model.model_skin, i, 0);
-}
-setMorphTargetInfluences(monster_model.model_skin, Math.floor(application.t), 1);
-application.t = application.t + 0.5;
-}
 	}
 	);
 	application.events.addListener("mousemove", function(x,y)
