--- a/xss/production/test/wgl_coll_anim_3.html
+++ b/xss/production/test/wgl_coll_anim_3.html
@@ -47,70 +47,99 @@ application.events = new ev.EventHolder();
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
 		{
-		id:				"pump",
+		id:				"character",
 		resource_type:	RESOURCE_COLLADA_MODEL,
-		src:			"model/pump/pump.dae",
+		src:			"model/character/character.dae",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
 		children:		{}
 		}
 );	
-				var pump;
+				var character;
 				global_package.events.addListener("loaded", function()
 				{
-					pump = streamer.get_resource("pump");
+					character = streamer.get_resource("character");
 				});
 			var child_ = {};
-			child_.type_ = 'collada_animation';
+			child_.type_ = 'collada_skin';
 			for(var i = 0; i < global_package.items.length; i++)
 			{
-				if(global_package.items[i].id == "pump")
+				if(global_package.items[i].id == "character")
 				{		
-					global_package.items[i].children['anim'] = child_;
+					global_package.items[i].children['char_anim'] = child_;
 				}					
 			}	
 				var temp = {};
-				temp.type_ = 'anim';
-				temp.start_frame = 0;
-				temp.end_frame = 47;
-				temp.time = 45;
-				temp.loop = null;
-				temp.parent = 'anim';
+				temp.type_ = 'skin';
+				temp.start_frame = 5;
+				temp.end_frame = 100;
+				temp.time = 1;
+				temp.loop = true;
+				temp.parent = 'char_anim';
 				for(var i = 0; i < global_package.items.length; i++)
 				{
-					if(global_package.items[i].id == "pump")
+					if(global_package.items[i].id == "character")
 					{
-						global_package.items[i].children['assemble'] = temp;
+						global_package.items[i].children['idle'] = temp;
 					}
 				}
-			var child_ = {};
-			child_.type_ = 'collada_camera';
-			for(var i = 0; i < global_package.items.length; i++)
-			{
-				if(global_package.items[i].id == "pump")
-				{		
-					global_package.items[i].children['model_cam'] = child_;
-				}					
-			}	
-			var child_ = {};
-			child_.type_ = 'collada_camera';
-			for(var i = 0; i < global_package.items.length; i++)
-			{
-				if(global_package.items[i].id == "pump")
-				{		
-					global_package.items[i].children['model_cam1'] = child_;
-				}					
-			}	
-			var child_ = {};
-			child_.type_ = 'collada_camera';
-			for(var i = 0; i < global_package.items.length; i++)
-			{
-				if(global_package.items[i].id == "pump")
-				{		
-					global_package.items[i].children['model_cam2'] = child_;
-				}					
-			}	
+				var temp = {};
+				temp.type_ = 'skin';
+				temp.start_frame = 105;
+				temp.end_frame = 144;
+				temp.time = 1;
+				temp.loop = true;
+				temp.parent = 'char_anim';
+				for(var i = 0; i < global_package.items.length; i++)
+				{
+					if(global_package.items[i].id == "character")
+					{
+						global_package.items[i].children['walk'] = temp;
+					}
+				}
+				var temp = {};
+				temp.type_ = 'skin';
+				temp.start_frame = 150;
+				temp.end_frame = 179;
+				temp.time = 1;
+				temp.loop = true;
+				temp.parent = 'char_anim';
+				for(var i = 0; i < global_package.items.length; i++)
+				{
+					if(global_package.items[i].id == "character")
+					{
+						global_package.items[i].children['run'] = temp;
+					}
+				}
+				var temp = {};
+				temp.type_ = 'skin';
+				temp.start_frame = 185;
+				temp.end_frame = 284;
+				temp.time = 3;
+				temp.loop = true;
+				temp.parent = 'char_anim';
+				for(var i = 0; i < global_package.items.length; i++)
+				{
+					if(global_package.items[i].id == "character")
+					{
+						global_package.items[i].children['alert'] = temp;
+					}
+				}
+				var temp = {};
+				temp.type_ = 'skin';
+				temp.start_frame = 290;
+				temp.end_frame = 389;
+				temp.time = 3;
+				temp.loop = true;
+				temp.parent = 'char_anim';
+				for(var i = 0; i < global_package.items.length; i++)
+				{
+					if(global_package.items[i].id == "character")
+					{
+						global_package.items[i].children['conversation'] = temp;
+					}
+				}
 		global_package.add_item({
 			id:				"invalid_res",
 			resource_type:	RESOURCE_IMAGE,
@@ -135,15 +164,21 @@ if(!g_delta) g_delta = 0;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
+				manager.scene.add(camera_1);
+				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var material_wireframe;var a_ligth;var d_ligth_1;var light1;var light2;var light3;var model1;var plane_1;
+var material_wireframe;var camera_1;var a_ligth;var d_ligth_1;var light1;var light2;var light3;var model1;var plane_1;
 threejs_load_resources(manager, function()
 {
 material_wireframe = new THREE.MeshBasicMaterial({
 color:gray,wireframe:true,
 	});
 			material_wireframe.manager = manager;
+		    camera_1 = 
+		    new THREE.PerspectiveCamera(75, 1.5, 0.100000001, 1000, null) ;	
+			manager.active_camera = camera_1;
+			camera_1.manager = manager;
 	    a_ligth = 
 	    new THREE.AmbientLight(ivory) ;
 	    manager.scene.add(a_ligth);
@@ -164,7 +199,7 @@ color:gray,wireframe:true,
 	    new THREE.PointLight(blue, 0.200000003, 0) ;
 	    manager.scene.add(light3);
 			light3.manager = manager;
-		model1 = clone3jsObject( manager.streamer.get_resource('pump').data, manager );	
+		model1 = clone3jsObject( manager.streamer.get_resource('character').data, manager );	
 		manager.scene.add(model1);
 		model1.events = new ev.EventHolder();			
 			model1.manager = manager;
@@ -174,21 +209,25 @@ color:gray,wireframe:true,
 		plane_1.events = new ev.EventHolder();
 			plane_1.manager = manager;
             set_material_alpha(material_wireframe, 20);
-            a_ligth.position.y = 3000;
-            a_ligth.position.z = 3000;
-            d_ligth_1.position.y = 3000;
+            manager.events.addListener('update', function(){if(camera_1)camera_1.lookAt(scene.position)});
+            camera_1.position.y = 50;
+            camera_1.position.z = 500;
+            a_ligth.position.y = 5000;
+            a_ligth.position.z = 5000;
+            d_ligth_1.position.y = 5000;
             d_ligth_1.position.z = 5000;
-            model1.scale.x = 1;
-            model1.scale.y = 1;
-            model1.scale.z = 1;
+            model1.scale.x = 20;
+            model1.scale.y = 20;
+            model1.scale.z = 20;
+            set_rotation_x(model1.rotation, -90);
+            model1.position.y = -50;
             plane_1.position.y = -70;
             application.mouse_x = null;
             application.mouse_y = null;
+            application.status = "idle";
 	application.events.addListener("init", function()
 	{    
-		model1.model_cam2.position.x += 5;
-model1.model_cam2.position.z += 5;
-model1.anim.start("assemble");
+		model1.char_anim.start("idle");
 	}
 	);
 	application.events.addListener("update", function(delta,elapsed)
@@ -205,9 +244,38 @@ light3.position.y = Math.cos(time * 5) * 4000;
 light3.position.z = Math.cos(time * 7) * 3009;
 	}
 	);
-	application.events.addListener("switch_cameras", function()
+	application.events.addListener("keydown", function(keycode)
 	{    
-		set_active_camera(model1.model_cam2);
+		if (keycode == W)
+{
+model1.char_anim.start("walk");
+}
+else
+{
+if (keycode == R)
+{
+model1.char_anim.start("run");
+}
+else
+{
+if (keycode == C)
+{
+model1.char_anim.start("conversation");
+}
+else
+{
+if (keycode == A)
+{
+model1.char_anim.start("alert");
+}
+}
+}
+}
+	}
+	);
+	application.events.addListener("keyup", function()
+	{    
+		model1.char_anim.start("idle");
 	}
 	);
 var event_manager = new ev.ThreeEventManager();
