--- a/xss/production/test/wgl_collada3.html
+++ b/xss/production/test/wgl_collada3.html
@@ -47,25 +47,25 @@ application.events = new ev.EventHolder();
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
 		{
-		id:				"pump",
+		id:				"balldroid",
 		resource_type:	RESOURCE_COLLADA_MODEL,
-		src:			"model/pump/pump.dae",
+		src:			"model/balldroid/balldroid.dae",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
 		children:		{}
 		}
 );	
-				var pump;
+				var balldroid;
 				global_package.events.addListener("loaded", function()
 				{
-					pump = streamer.get_resource("pump");
+					balldroid = streamer.get_resource("balldroid");
 				});
 			var child_ = {};
 			child_.type_ = 'collada_animation';
 			for(var i = 0; i < global_package.items.length; i++)
 			{
-				if(global_package.items[i].id == "pump")
+				if(global_package.items[i].id == "balldroid")
 				{		
 					global_package.items[i].children['anim'] = child_;
 				}					
@@ -73,44 +73,17 @@ application.events = new ev.EventHolder();
 				var temp = {};
 				temp.type_ = 'anim';
 				temp.start_frame = 0;
-				temp.end_frame = 47;
-				temp.time = 45;
-				temp.loop = null;
+				temp.end_frame = 8;
+				temp.time = 10;
+				temp.loop = true;
 				temp.parent = 'anim';
 				for(var i = 0; i < global_package.items.length; i++)
 				{
-					if(global_package.items[i].id == "pump")
+					if(global_package.items[i].id == "balldroid")
 					{
-						global_package.items[i].children['assemble'] = temp;
+						global_package.items[i].children['arm'] = temp;
 					}
 				}
-			var child_ = {};
-			child_.type_ = 'collada_camera';
-			for(var i = 0; i < global_package.items.length; i++)
-			{
-				if(global_package.items[i].id == "pump")
-				{		
-					global_package.items[i].children['model_cam'] = child_;
-				}					
-			}	
-			var child_ = {};
-			child_.type_ = 'collada_camera';
-			for(var i = 0; i < global_package.items.length; i++)
-			{
-				if(global_package.items[i].id == "pump")
-				{		
-					global_package.items[i].children['model_cam1'] = child_;
-				}					
-			}	
-			var child_ = {};
-			child_.type_ = 'collada_camera';
-			for(var i = 0; i < global_package.items.length; i++)
-			{
-				if(global_package.items[i].id == "pump")
-				{		
-					global_package.items[i].children['model_cam2'] = child_;
-				}					
-			}	
 		global_package.add_item({
 			id:				"invalid_res",
 			resource_type:	RESOURCE_IMAGE,
@@ -135,15 +108,21 @@ if(!g_delta) g_delta = 0;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
+				manager.scene.add(camera_1);
+				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var material_wireframe;var a_ligth;var d_ligth_1;var light1;var light2;var light3;var model1;var plane_1;
+var material_wireframe;var camera_1;var a_ligth;var d_ligth_1;var model1;
 threejs_load_resources(manager, function()
 {
 material_wireframe = new THREE.MeshBasicMaterial({
 color:gray,wireframe:true,
 	});
 			material_wireframe.manager = manager;
+		    camera_1 = 
+		    new THREE.PerspectiveCamera(75, 1.5, 0.100000001, 1000, null) ;	
+			manager.active_camera = camera_1;
+			camera_1.manager = manager;
 	    a_ligth = 
 	    new THREE.AmbientLight(ivory) ;
 	    manager.scene.add(a_ligth);
@@ -152,62 +131,27 @@ color:gray,wireframe:true,
 	    new THREE.DirectionalLight(White, 2, 0, null) ;
 	    manager.scene.add(d_ligth_1);
 			d_ligth_1.manager = manager;
-	    light1 = 
-	    new THREE.PointLight(red, 0.200000003, 0) ;
-	    manager.scene.add(light1);
-			light1.manager = manager;
-	    light2 = 
-	    new THREE.PointLight(green, 0.200000003, 0) ;
-	    manager.scene.add(light2);
-			light2.manager = manager;
-	    light3 = 
-	    new THREE.PointLight(blue, 0.200000003, 0) ;
-	    manager.scene.add(light3);
-			light3.manager = manager;
-		model1 = clone3jsObject( manager.streamer.get_resource('pump').data, manager );	
+		model1 = clone3jsObject( manager.streamer.get_resource('balldroid').data, manager );	
 		manager.scene.add(model1);
 		model1.events = new ev.EventHolder();			
 			model1.manager = manager;
-	    plane_1_plane = new THREE.PlaneGeometry(1000, 1000, 50, 50) ;
-	    plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
-	    manager.scene.add(plane_1);
-		plane_1.events = new ev.EventHolder();
-			plane_1.manager = manager;
             set_material_alpha(material_wireframe, 20);
-            a_ligth.position.y = 3000;
-            a_ligth.position.z = 3000;
-            d_ligth_1.position.y = 3000;
+            manager.events.addListener('update', function(){if(camera_1)camera_1.lookAt(scene.position)});
+            camera_1.position.y = 50;
+            camera_1.position.z = 500;
+            a_ligth.position.y = 5000;
+            a_ligth.position.z = 5000;
+            d_ligth_1.position.y = 5000;
             d_ligth_1.position.z = 5000;
-            model1.scale.x = 1;
-            model1.scale.y = 1;
-            model1.scale.z = 1;
-            plane_1.position.y = -70;
+            model1.scale.x = 100;
+            model1.scale.y = 100;
+            model1.scale.z = 100;
+            set_rotation_x(model1.rotation, -75);
             application.mouse_x = null;
             application.mouse_y = null;
 	application.events.addListener("init", function()
 	{    
-		model1.model_cam2.position.x += 5;
-model1.model_cam2.position.z += 5;
-model1.anim.start("assemble");
-	}
-	);
-	application.events.addListener("update", function(delta,elapsed)
-	{    
-		var time = elapsed * 0.000500000024;
-light1.position.x = Math.sin(time * 7) * 3009;
-light1.position.y = Math.cos(time * 5) * 4000;
-light1.position.z = Math.cos(time * 3) * 3009;
-light2.position.x = Math.sin(time * 7) * 3009;
-light2.position.y = Math.cos(time * 3) * 4000;
-light2.position.z = Math.cos(time * 5) * 3009;
-light3.position.x = Math.sin(time * 3) * 3009;
-light3.position.y = Math.cos(time * 5) * 4000;
-light3.position.z = Math.cos(time * 7) * 3009;
-	}
-	);
-	application.events.addListener("switch_cameras", function()
-	{    
-		set_active_camera(model1.model_cam2);
+		model1.anim.start("arm");
 	}
 	);
 var event_manager = new ev.ThreeEventManager();
