--- a/xss/production/test/animtest.html
+++ b/xss/production/test/animtest.html
@@ -39,18 +39,20 @@ var SoundUtils = new ui.SoundUtils();
         {
             return a + (b - a)*t;
         }		
-		var streamer = new stream.Streamer();	
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
-            {
+		{
 		id:				"__image1",
 		resource_type:	RESOURCE_IMAGE,
 		src:			"images/img1.png",
 		frame_width:	null,
 		frame_height:	null,
-		animations:		[]
-});	
+		animations:		[],	
+		children:		{}
+		}
+);	
 				var __image1;
 				global_package.events.addListener("loaded", function()
 				{
@@ -208,7 +210,6 @@ anim3.stop();
 anim4 =
 new state.Sequence(
 g_sequence_manager);
-            anim4.nested = nested;
                 anim4.start();
             anim4.nested =
 new state.Sequence(
