--- a/xss/production/test/wgl_monster.html
+++ b/xss/production/test/wgl_monster.html
@@ -28,19 +28,23 @@ var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
 scene.mouse_thru = true;
-var streamer;
+var streamer = {};
 var manager = new threejs.Manager(scene, renderer, null, canvas_position);
 var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
+manager.events.parent = manager;
+manager.c_anims = [];
+manager.js_anims = [];
+manager.c_skins = [];
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
 var clock = new THREE.Clock();
 application.events = new ev.EventHolder();
-		var streamer = new stream.Streamer();	
-		streamer.manager = manager;
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
-	// --------RESOURCES---------
+	streamer.manager = manager;
+// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
 		{
@@ -58,6 +62,29 @@ application.events = new ev.EventHolder();
 				{
 					model_1 = streamer.get_resource("model_1");
 				});
+			var child_ = {};
+			child_.type_ = 'json_animation';
+			for(var i = 0; i < global_package.items.length; i++)
+			{
+				if(global_package.items[i].id == "model_1")
+				{		
+					global_package.items[i].children['model_skin'] = child_;
+				}					
+			}	
+				var temp = {};
+				temp.type_ = 'anim';
+				temp.start_frame = 0;
+				temp.end_frame = 23;
+				temp.time = 1;
+				temp.loop = true;
+				temp.parent = 'model_skin';
+				for(var i = 0; i < global_package.items.length; i++)
+				{
+					if(global_package.items[i].id == "model_1")
+					{
+						global_package.items[i].children['walk'] = temp;
+					}
+				}
 		global_package.add_item({
 			id:				"invalid_res",
 			resource_type:	RESOURCE_IMAGE,
@@ -78,6 +105,7 @@ if (g_elapsed < 0)
 else
 	g_delta  = now - g_elapsed;  
 g_elapsed = now; 
+if(!g_delta) g_delta = 0;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
@@ -126,6 +154,11 @@ color:blanchedalmond,wireframe:true,
             plane_1.position.y = -500;
             application.mouse_x = null;
             application.mouse_y = null;
+	application.events.addListener("init", function()
+	{    
+		monster_model.model_skin.start("walk");
+	}
+	);
 	application.events.addListener("update", function()
 	{    
 		camera_1.position.x = camera_1.position.x + (application.mouse_x - camera_1.position.x) * 0.0500000007;
