--- a/xss/production/test/wgl_collada.html
+++ b/xss/production/test/wgl_collada.html
@@ -23,33 +23,36 @@
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
 		var ui_;
+		var model_src = "model/monster/monster.dae";
 var canvas_position = {x:0, y:0};
 var g_elapsed;
 var g_delta;	
 var scene = new THREE.Scene();
 scene.mouse_thru = true;
-var streamer;
+var streamer = {};
 var manager = new threejs.Manager(scene, renderer, null, canvas_position);
 var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
 manager.events.parent = manager;
 manager.c_anims = [];
+manager.js_anims = [];
 manager.c_skins = [];
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
 var clock = new THREE.Clock();
 application.events = new ev.EventHolder();
-		var streamer = new stream.Streamer();	
-		streamer.manager = manager;
+		var streamer = new stream.Streamer();		
 		var ResourceUtils = new stream.ResourceUtils();
-	// --------RESOURCES---------
+	streamer.manager = manager;
+// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
 		{
 		id:				"model_1",
 		resource_type:	RESOURCE_COLLADA_MODEL,
-		src:			"model/monster/monster.dae",
+		src:			"null",
+		runtime_src:	model_src,
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[],	
@@ -105,6 +108,7 @@ else
 	g_delta  = now - g_elapsed;  
 g_elapsed = now; 
 if(!g_delta) g_delta = 0;
+manager.delta = g_delta;
 c_delta = clock.getDelta(),
 c_elapsed = clock.getElapsedTime() * 10;
 manager.events.dispatch("update", [g_delta, g_elapsed]);	
@@ -175,7 +179,8 @@ color:grey,
             application.mouse_y = null;
 	application.events.addListener("init", function()
 	{    
-		monster_model.model_skin.start("walk");
+		var model_src = "model/monster/monster.dae";
+monster_model.model_skin.start("walk");
 	}
 	);
 	application.events.addListener("update", function(delta,elapsed)
